[SKELETON] adjustment endpoint health check server and versioning app
