# api/swagger.yaml
@@ -5,7 +5,7 @@ swagger: "2.0"
 info:
   description: "The \"REST API for TERASEHAT User Microservice\" refers to the Representational State Transfer (REST) Application Programming Interface (API) specifically tailored for the User Microservice within TERASEHAT. This API facilitates communication and interaction with the User Microservice, allowing external applications or services to execute operations related to user management within the TERASEHAT system. The API includes endpoints for user registration, authentication, and other user-related functionalities, following RESTful principles to ensure scalability and interoperability as a web service for the TERASEHAT platform"
   title: "REST API for TERASEHAT User Microservice"
-  version: "1.1.0"
+  version: "1.1.1"
 produces:
   - application/json
 consumes:
@@ -37,7 +37,7 @@ paths:
         200:
           description: ok
           schema:
-            $ref: "#/definitions/basicResponse"
+            $ref: "#/definitions/healthCheckResponse"
         201:
           description: created
           schema:
@@ -83,7 +83,7 @@ paths:
 # --definitions
 definitions:
   basicResponse:
-    description: definition for basic response code & message when request to endpoint was successful
+    description: definition for basic response code & message when request to endpoint was successfull
     type: object
     properties:
       code:
@@ -93,4 +93,28 @@ definitions:
       message:
         type: string
         x-omitempty: false
+  healthCheckResponse:
+    description: definition for health response with code & message when request to endpoint was successfull
+    type: object
+    properties:
+      code:
+        type: integer
+        format: int32
+        x-omitempty: false
+      message:
+        type: string
+        x-omitempty: false
+      results:
+        type: object
+        x-omitempty: false
+        properties: 
+          app_name:
+            type: string
+          app_version:
+            type: string
+          app_environment:
+            type: string
+          app_max_upload_mb:
+            type: integer
+
   
